# cuda-checkpoint-vllm

./: Makefile  README.md  go.mod  pyproject.toml
cmd/gvisor-gpu-ckpt/: main.go
deploy/docker-compose/: docker-compose.yaml
deploy/kubernetes/: vllm-checkpoint-sidecar.yaml
src/cuda_checkpoint/: __init__.py  api.py  discover.py  multi_gpu.py
src/cuda_checkpoint_vllm/: __init__.py  cli.py  discovery.py  orchestrator.py
tests/: modal_test_generic.py  test_api.py  test_discover.py  test_multi_gpu.py  test_vllm.py
