[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-checkpoint-vllm"
version = "0.1.0"
description = "Multi-GPU CUDA checkpoint/restore — 92-98% cold start reduction. Generic core + vLLM integration."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
vllm = ["httpx"]
dev = ["pytest>=8.0"]

[project.scripts]
vllm-ckpt = "cuda_checkpoint_vllm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
